# ai-eval-micro-lab

./: README.md  pyproject.toml
examples/: calibration-audit.jsonl  classification-evaluation.jsonl  model-comparison.jsonl  output-consistency.jsonl  overlap-candidate.jsonl  overlap-reference.jsonl  quality-gate.jsonl  regression-gate.jsonl  retrieval-ranking.jsonl  selective-prediction.jsonl  slice-evaluation.jsonl
src/ai_eval_micro_lab/: __init__.py  calibration.py  classification.py  cli.py  comparison.py  consistency.py  gate.py  metrics.py  overlap.py  regression_gate.py  retrieval.py  selective.py  slices.py
tests/: test_calibration.py  test_classification.py  test_comparison.py  test_consistency.py  test_gate.py  test_metrics.py  test_overlap.py  test_regression_gate.py  test_retrieval.py  test_selective.py  test_slices.py
