[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-eval-micro-lab"
version = "0.7.0"
description = "Dependency-free utilities for small AI evaluation experiments"
requires-python = ">=3.10"
license = "MIT"

[project.scripts]
ai-eval = "ai_eval_micro_lab.cli:main"
ai-eval-calibration = "ai_eval_micro_lab.calibration:main"
ai-eval-compare = "ai_eval_micro_lab.comparison:main"
ai-eval-consistency = "ai_eval_micro_lab.consistency:main"
ai-eval-gate = "ai_eval_micro_lab.gate:main"
ai-eval-regression-gate = "ai_eval_micro_lab.regression_gate:main"
ai-eval-selective = "ai_eval_micro_lab.selective:main"
ai-eval-slices = "ai_eval_micro_lab.slices:main"

[tool.setuptools.packages.find]
where = ["src"]
